<resources>
    <string name="app_name">Note Share</string>
    <string name="title">Title</string>
    <string name="title_activity_sticky_edit">StickyEditActivity</string>
    <string name="body">Body</string>
    <string name="back_button"><![CDATA[<-]]></string>
    <string name="check_hint">New item</string>
    <string name="check_plus_hint">Add an item</string>
    <string name="event_title_hint">Event Name:</string>
    <string name="event_start">Event Start:</string>
    <string name="event_date">(mm/dd/yyyy)</string>
    <string name="event_time">(hr:min)</string>
    <string name="event_location">Location:</string>
    <string name="event_description">Describe the event here..</string>
    <string name="event_create">Create Event</string>
    <string name="event_importance">How important is your event?: </string>
    <string name="goal_title">Name your Goal</string>
    <string name="goal_time">Times a </string>
    <string name="goal_date">Start date</string>
    <string name="goal_start">Begin!</string>
    <string name="share_nfc">Tap to share this note!</string>
</resources>

