<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent"
    android:orientation="vertical"
    tools:context=".GoalEditActivity">

    <Button
        android:id="@+id/goal_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:text="@string/back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="createGoal"/>

    <FrameLayout
        android:id="@+id/goal_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/goal_back">

        <ImageView
            android:id="@+id/goal_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/sticky_top" />

        <EditText
            android:id="@+id/goal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="125dp"
            android:background="@color/colorSticky"
            android:hint="@string/event_title_hint"
            android:inputType="textCapSentences"
            android:textColorHint="@color/hintText"
            android:textSize="32sp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/goal_start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/goal_frame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_start" />
        <Button
            android:id="@+id/goal_start1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/event_date"/>
        <Button
            android:id="@+id/goal_start2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/event_time"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/goal_start_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description"
            android:id="@+id/goal_description_text"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goal_spinner_layout"
        app:layout_constraintTop_toBottomOf="@id/goal_description"
        android:paddingHorizontal="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_importance"
            android:layout_gravity="center"/>
        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/goal_spinner"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/goal_spinner_layout"
        android:id="@+id/goal_create"
        android:onClick="createGoal"
        android:text="@string/event_create"/>

    <ImageView
        android:id="@+id/goal_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/sticky_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>