<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/event"
    android:orientation="vertical">

    <Button
        android:id="@+id/event_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:width="40dp"
        android:height="40dp"
        android:background="@color/event"
        android:text="Back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/event_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/event_back">

        <ImageView
            android:id="@+id/event_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/event_top_big" />

        <EditText
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="-32dp"
            android:background="@color/event"
            android:hint="@string/event_title_hint"
            android:inputType="textCapSentences"
            android:textColorHint="@color/hintText"
            android:textSize="32sp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/event_start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/event_frame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_start" />
        <Button
            android:id="@+id/event_start1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/event_date"/>
        <Button
            android:id="@+id/event_start2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/event_time"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/event_start_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_location"
            android:id="@+id/event_location_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/event_location">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description"
            android:id="@+id/event_description_text"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_spinner_layout"
        app:layout_constraintTop_toBottomOf="@id/event_description"
        android:paddingHorizontal="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_importance"
            android:layout_gravity="center"/>
        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/event_spinner"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_spinner_layout"
        android:id="@+id/event_create"
        android:onClick="createEvent"
        android:text="@string/event_create"/>

    <ImageView
        android:id="@+id/event_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/event_bot_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>