<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_button"
        android:layout_weight="0" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sticky_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sticky_top"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="top"/>

        <EditText
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="32sp"
            android:inputType="textMultiLine|textCapSentences"
            android:text="@string/title"
            android:background="@color/colorSticky"
            android:layout_gravity="bottom"/>

    </FrameLayout>

    <EditText
        android:id="@+id/body_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:textAlignment="gravity"
        android:gravity="top"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:text="@string/body"
        android:background="@color/colorSticky"
        android:layout_weight="1"
        android:imeOptions=""/>

    <ImageView
        android:id="@+id/sticky_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/sticky_bottom"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

</LinearLayout>